resolve scrollbar styling issues and improve score bar UI/UX

--- a/dome-registry-ui/src/app/new-state/new-state.component.scss
+++ b/dome-registry-ui/src/app/new-state/new-state.component.scss
@@ -121,3 +121,8 @@ background: linear-gradient(0deg, #178add,#03dcee);
 td, th {
     border-width: 2px;
   }
+
+.dashboard.w-100.h-100{
+  padding-right:0 ;
+  padding-bottom: 1rem;
+}
